Study Use RTCDataChannel to exchange data

--- a/src/3_RTCDataChannel/index.html
+++ b/src/3_RTCDataChannel/index.html
@@ -13,8 +13,10 @@
 
   <h1>Realtime communication with WebRTC</h1>
 
-  <textarea id="dataChannelSend" disabled
-    placeholder="Press Start, enter some text, then press Send."></textarea>
+  <!-- Text를 입력하기 위한 textarea -->
+  <textarea id="dataChannelSend" disabled placeholder="Press Start, enter some text, then press Send."></textarea>
+
+  <!-- Peer간에 streaming되는 textarea -->
   <textarea id="dataChannelReceive" disabled></textarea>
 
   <div id="buttons">
